fix tab bar collapsing where there are no tabs

--- a/client/assets/styles/scss/views/views-toolbar.scss
+++ b/client/assets/styles/scss/views/views-toolbar.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex: 0 0 auto;
   font-weight: $weight-normal;
+  height: 61px;
   margin: 0 $xs;
   overflow: visible;
   padding-top: $xs;
